--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <h1>Weather Dashboard</h1>
-        <div class="container">
+        <div class="container border">
             <div class="weather-input">
                 <h3> Enter a City Name</h3>
              <input class="city-input" type: "text" placeholder="E.g., New York, London, Tokyo">
-            <button class="search-btn">Search</button> 
+            <button id="search-btn">Search</button> 
             <div class="separator"></div>
             <button class="location-btn"> Use Current Location</button>
             <div class="search-history">
                 <h3>Search History</h3>
-                <ul id="search-history-list"></ul>
+                <ul class="search-history-list"></ul>
             </div>   
-            </div>
+        </div>
             <div class="weather-data">
                 <div class="current-weather">
                     <div class="details">
@@ -29,7 +29,7 @@
                         <h4> Wind: ___ M/S </h4>
                         <h4> Humidity: ___% </h4>
                     </div>
-                   </div> 
+                </div> 
                 <div class="days-forecast">
                     <h2> 5-Day Forecast </h2>
                     <ul class="weather-cards">
